force-app/main/default/objects/CopadoTipEvent__e/CopadoTipEvent__e.object-meta.xml
<CustomObject>
    <description>Capture and display the  default Copado Tip based on the Start and End Time fields</description>
    <label>CopadoTipEvent</label>
    <pluralLabel>CopadoTipEvents</pluralLabel>
</CustomObject>