force-app/main/default/objects/CopadoTipEvent__e/fields/Copado_Tip_ID__c.field-meta.xml
<CustomField>
    <fullName>Copado_Tip_ID__c</fullName>
    <description>Default Copado Tip ID</description>
    <label>Copado Tip ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>