force-app/main/default/objects/CopadoTipEvent__e/fields/Default_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_End_Time__c</fullName>
    <description>Default End Time event</description>
    <label>Default End Time</label>
    <type>DateTime</type>
</CustomField>