force-app/main/default/objects/CopadoTipEvent__e/fields/Default_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_Start_Time__c</fullName>
    <description>Default Copado Tip Start Time</description>
    <label>DefaultStartTime</label>
    <type>DateTime</type>
</CustomField>